# tracelet

./: .eslintrc.json  .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
demo/: README.md  generate_traces.js  sample_agent.py  sample_chat.ts  sample_rag_app.py
docs/marketplace/: CHANGELOG.md
python-sdk/: README.md  pyproject.toml
python-sdk/src/tracelet/: __init__.py  config.py  context.py  decorator.py  eval.py  exporter.py  langchain_callback.py  span.py
python-sdk/src/tracelet/patchers/: anthropic_patcher.py  openai_patcher.py
python-sdk/src/tracelet_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: extension.ts
src/codelens/: detector.ts  index.ts  patterns.ts
src/diff/: content-provider.ts  index.ts
src/heatmap/: colors.ts  index.ts
src/providers/: base.ts  index.ts  langfuse.ts  langsmith.ts  otel-local.ts
src/schemas/: index.ts  langfuse.ts  langsmith.ts  openinference.ts
src/services/: source-mapper.ts  telemetry.ts  trace-store.ts
src/types/: config.ts  index.ts  trace.ts
src/utils/: config.ts  constants.ts  logger.ts
src/views/: trace-detail.ts  trace-items.ts  trace-tree.ts
test/suite/: detector.test.ts  schemas.test.ts
