[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracelet-sdk"
version = "0.1.0"
authors = [
  { name="Tracelet", email="hello@tracelet.dev" },
]
description = "Auto-instrumentation and local evaluation engine for Tracelet VS Code extension"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "langchain>=0.1.0"
]

[project.urls]
"Homepage" = "https://github.com/satwiksps/tracelet"
"Bug Tracker" = "https://github.com/satwiksps/tracelet/issues"
